Add home layout

--- a/hr_client/src/components/Home/home.css
+++ b/hr_client/src/components/Home/home.css
@@ -23,11 +23,7 @@
 }
 
 .menu-bar {
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    top: 0px;
-    position: absolute;
+    align-items: center;
     display: flex;
     flex-direction: row;
 }
